--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,5 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+spring.web.resources.static-locations=file:uploads/
