Configure Firebase credentials property

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.jpa.hibernate.ddl-auto = update
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.web.resources.static-locations=file:uploads/
+
+# Path to Firebase Admin service account JSON. You can override via env var FIREBASE_CREDENTIALS_FILE or set the absolute path here.
+firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
