--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.web.resources.static-locations=file:uploads/
 
-# Path to Firebase Admin service account JSON. You can override via env var FIREBASE_CREDENTIALS_FILE or set the absolute path here.
-firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
+# Path to Firebase Admin service account JSON. Must be provided via env var FIREBASE_CREDENTIALS_FILE.
+firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE}
