Default Firebase credentials path and ignore service account file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 
 spring.web.resources.static-locations=file:uploads/
 
-# Path to Firebase Admin service account JSON. Must be provided via env var FIREBASE_CREDENTIALS_FILE.
-firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE}
+# Path to Firebase Admin service account JSON. Defaults to file in project root; can override with FIREBASE_CREDENTIALS_FILE env var.
+firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
