--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,28 +1,7 @@
 spring.application.name=gamelibrarybackend
 
-spring.datasource.url=jdbc:mysql://localhost:3306/gamelibrary
-spring.datasource.username=gamelibrary
-spring.datasource.password=Sajeewa5263415#
-
-spring.jpa.database = MYSQL
-
-spring.jpa.show-sql = true
-
-spring.jpa.hibernate.ddl-auto = update
-
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-
-spring.web.resources.static-locations=file:uploads/
-
 # Path to Firebase Admin service account JSON. Defaults to file in project root; can override with FIREBASE_CREDENTIALS_FILE env var.
 firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
 
-# S3/R2 storage configuration for image uploads
-storage.s3.bucket=${STORAGE_S3_BUCKET:}
-storage.s3.region=${STORAGE_S3_REGION:us-east-1}
-storage.s3.access-key=${STORAGE_S3_ACCESS_KEY:}
-storage.s3.secret-key=${STORAGE_S3_SECRET_KEY:}
-# For R2/MinIO, set the custom endpoint; leave blank for AWS S3.
-storage.s3.endpoint=${STORAGE_S3_ENDPOINT:}
-# Base URL used in returned image links (e.g., https://<bucket>.<account>.r2.cloudflarestorage.com)
-storage.s3.public-base-url=${STORAGE_S3_PUBLIC_BASE_URL:}
+# Firebase Storage bucket name. If omitted, uses default bucket from Firebase project.
+firebase.storage.bucket=${FIREBASE_STORAGE_BUCKET:}
