Require Firebase credentials via file path env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,7 @@
 spring.application.name=gamelibrarybackend
 
-# Path to Firebase Admin service account JSON. Defaults to file in project root; can override with FIREBASE_CREDENTIALS_FILE env var.
+# Path to Firebase Admin service account JSON. Defaults to file in project root; can override with FIREBASE_CREDENTIALS_FILE env var or GOOGLE_APPLICATION_CREDENTIALS.
 firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
-# Alternatively, provide raw JSON via env var firebase.admin.credentials.json / FIREBASE_CREDENTIALS_JSON
-firebase.admin.credentials.json=${FIREBASE_CREDENTIALS_JSON:}
 
 # Firebase Storage bucket name. If omitted, uses default bucket from Firebase project.
 firebase.storage.bucket=${FIREBASE_STORAGE_BUCKET:}
