Reintroduce MySQL JPA and repository usage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=gamelibrarybackend
 
+# MySQL datasource (override via env vars in Railway)
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/gamelibrary?useSSL=false&serverTimezone=UTC}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
 # Path to Firebase Admin service account JSON. Defaults to file in project root; can override with FIREBASE_CREDENTIALS_FILE env var or GOOGLE_APPLICATION_CREDENTIALS.
 firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-account.json}
 
