--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 spring.application.name=gamelibrarybackend
 
 # MySQL datasource (override via env vars in Railway)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/gamelibrary?useSSL=false&serverTimezone=UTC}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:root}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
+# Supports either SPRING_DATASOURCE_URL or MYSQL_URL provided by Railway.
+spring.datasource.url=${SPRING_DATASOURCE_URL:${MYSQL_URL:jdbc:mysql://localhost:3306/gamelibrary?useSSL=false&serverTimezone=UTC}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${MYSQLUSER:root}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${MYSQLPASSWORD:password}}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
