Add AWS S3 upload support with fallback to Firebase Storage

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,11 @@ firebase.admin.credentials.file=${FIREBASE_CREDENTIALS_FILE:firebase-service-acc
 
 # Firebase Storage bucket name. If omitted, uses default bucket from Firebase project.
 firebase.storage.bucket=${FIREBASE_STORAGE_BUCKET:}
+
+# AWS S3 configuration (optional; if set, uploadImage will prefer S3)
+storage.s3.bucket=${STORAGE_S3_BUCKET:}
+storage.s3.region=${STORAGE_S3_REGION:us-east-1}
+storage.s3.access-key=${STORAGE_S3_ACCESS_KEY:}
+storage.s3.secret-key=${STORAGE_S3_SECRET_KEY:}
+storage.s3.endpoint=${STORAGE_S3_ENDPOINT:}
+storage.s3.public-base-url=${STORAGE_S3_PUBLIC_BASE_URL:}
