--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,7 @@ storage.s3.access-key=${STORAGE_S3_ACCESS_KEY:}
 storage.s3.secret-key=${STORAGE_S3_SECRET_KEY:}
 storage.s3.endpoint=${STORAGE_S3_ENDPOINT:}
 storage.s3.public-base-url=${STORAGE_S3_PUBLIC_BASE_URL:}
+
+# Upload limits
+spring.servlet.multipart.max-file-size=${MAX_UPLOAD_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${MAX_UPLOAD_SIZE:10MB}
