--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,3 +26,7 @@ storage.s3.public-base-url=${STORAGE_S3_PUBLIC_BASE_URL:}
 # Upload limits
 spring.servlet.multipart.max-file-size=${MAX_UPLOAD_SIZE:10MB}
 spring.servlet.multipart.max-request-size=${MAX_UPLOAD_SIZE:10MB}
+
+# OpenAI configuration
+openai.api-key=${OPENAI_API_KEY:}
+openai.model=${OPENAI_MODEL:gpt-4o-mini}
