--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,4 @@ spring.servlet.multipart.max-request-size=${MAX_UPLOAD_SIZE:10MB}
 
 # OpenAI configuration
 openai.api-key=${OPENAI_API_KEY:}
-openai.model=${OPENAI_MODEL:gpt-4o-mini}
+openai.model=${OPENAI_MODEL:gpt-5.2}
